--- a/CodigoPrueba.html
+++ b/CodigoPrueba.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formulario</title>
 </head>
+
 <body>
-    <header>
-        <h1>Titulo de la pagina</h1>
-    </header>
+
+    <div>
+        <form id="Formulario" action="#" method="post">
+
+            <p>
+                <label for="Nombre">
+                    Nombre: <input type="text" placeholder="Nombre" required>
+                </label>
+            </p>
+
+            <p>
+                <label for="Apellido">
+                    Apellido: <input type="text" placeholder="Apellido" required>
+                </label>
+            </p>
+
+            <p>
+                <label for="Edad">
+                    Edad: <input type="number" placeholder="Edad" required min="1" max="99">
+                </label>
+            </p>
+            
+            <p>
+                <label for="Genero">
+                    Hombre: <input type="radio" name="rdbtn" required>
+                </label>
+            </p>
+
+            <p>
+                <label for="Genero">
+                    Mujer: <input type="radio" name="rdbtn" required>
+                </label>
+            </p>
+
+            <input type="submit" value="Registrar datos">
+            <input type="reset" value="Resetear datos">
+
+        </form>
+    </div>
+
 </body>
+
 </html>
